--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
             <artifactId>jsoup</artifactId>
             <version>1.14.3</version> <!-- O la versión más reciente disponible -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.16.0</version> <!-- Reemplaza con la versión más reciente -->
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version> <!-- Reemplaza con la versión más reciente -->
+        </dependency>
 
     </dependencies>
 
