--- a/pom.xml
+++ b/pom.xml
@@ -11,23 +11,36 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.0.0</version> <!-- O la versión más reciente disponible -->
+            <version>5.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.14.3</version> <!-- O la versión más reciente disponible -->
+            <version>1.17.1</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.16.0</version> <!-- Reemplaza con la versión más reciente -->
+            <version>2.16.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.16.1</version> <!-- Usa la última versión disponible -->
+        </dependency>
+
+        <!-- Driver para el navegador que vayas a usar (ejemplo con Chrome) -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.16.1</version> <!-- Usa la misma versión que selenium-java -->
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.16.0</version> <!-- Reemplaza con la versión más reciente -->
+            <version>2.16.0</version>
         </dependency>
 
     </dependencies>
