--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.datasource.url=jdbc:sqlite:database/supermarketProducts.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+#spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
+#spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+# Configuración del DataSource
+driverClassName=org.sqlite.JDBC
+url=jdbc:sqlite:src/main/resources/database/supermarketProducts.db
+user=
+password=
