--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ driverClassName=org.sqlite.JDBC
 url=jdbc:sqlite:src/main/resources/database/supermarketProducts.db
 user=
 password=
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+#spring.devtools.restart.enabled=true
+#spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
 spring.mvc.static-path-pattern=/static/**
