cambio config BD y ubicacion. Arreglo de metodo select css

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,5 +1,6 @@
 driverClassName=org.sqlite.JDBC
-url=jdbc:sqlite:memory:src/main/resources/database/supermarketProducts.db?cache=shared
+#url=jdbc:sqlite:memory:src/main/resources/database/supermarketProducts.db?cache=shared
+url=jdbc:sqlite:memory:data/supermarketProducts.db?cache=shared
 username=
 password=
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
